--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pagina de Receita</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div id="page">
-    <img src="" alt="">
+    <img src="assets/main.jpg" alt="imagem de um cupcake com grãos de café e chantilly">
     <main>
       <section id="about">
 
